--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -16,6 +16,12 @@ spec:
       containers:
         - name: auth
           image: saileshbro/auth
+          env:
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
 # SERVICE
 ---
 apiVersion: v1
