--- a/auth/package.json
+++ b/auth/package.json
@@ -15,6 +15,7 @@
     ]
   },
   "dependencies": {
+    "@saileshbrotickets/common": "^1.0.3",
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.0",
