--- a/tickets/package.json
+++ b/tickets/package.json
@@ -15,7 +15,7 @@
     ]
   },
   "dependencies": {
-    "@saileshbrotickets/common": "latest",
+    "@saileshbrotickets/common": "^1.0.8",
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.0",
