--- a/tickets/package.json
+++ b/tickets/package.json
@@ -15,7 +15,7 @@
     ]
   },
   "dependencies": {
-    "@saileshbrotickets/common": "^1.0.8",
+    "@saileshbrotickets/common": "latest",
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.0",
@@ -26,6 +26,7 @@
     "express-validator": "^6.9.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.9",
+    "mongoose-update-if-current": "^1.4.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   },
